# fastapi-boilerplate

./: README.md  pyproject.toml
src/app/: main.py
src/app/api/v1/: __init__.py  test.py
src/app/core/: config.py  error_handling.py  setup.py
src/app/core/db/: database.py  models.py
src/app/core/exceptions/: __init__.py
src/app/models/: module.py
src/migrations/: env.py
src/migrations/versions/: c3bea05e98e1_added_modules.py
src/scripts/: create_initial_modules.py
